public/style.css
body {
  font-family: sans-serif;
  background: rgb(229, 211, 179);
  margin: 0;
}

.container {
  display: grid;
  grid-template-areas:
  "header header"
  "sidebar content";
  grid-template-rows: 75px 1px;
  grid-template-columns: 1.2fr 8.8fr;
}

.container > header {
  grid-area: header;
  background-color: rgb(152, 117, 84);
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100vw;
}

.container > .sidebar {
  grid-area: sidebar;
  background-color: rgb(185,153,118);
  height: 56vw;
}

.container > .content {
  grid-area: content;
  background-color: rgb(229, 211, 179);
  display: grid;
  grid-template-areas:
  "game queue"
  "game chat";
  grid-template-rows: 1fr 10fr;
  grid-template-columns: 1fr 1fr;
  padding: 1.5vw;
  gap: 1.5vw;
}

.container > .content > .auth {
  background-color: white;
  padding: 1.5vw;
}

.container > .content > .game {
  grid-area: game;
  background-color: white;
  padding: 1.5vw;
}

.container > .content > .queue {
  grid-area: queue;
  background-color: white;
  padding: 1.5vw;
}

.container > .content > .chat {
  grid-area: chat;
  background-color: white;
  padding: 1.5vw;
}

nav {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 76vw;
  padding: 0;
}

nav .nav-item {
  color: rgb(229, 211, 179);
  padding: 30px 1.5vw;
  text-decoration: none;
  font-size: 1.2em;
  transition: all 0.2s linear;
}

nav .nav-item:hover {
  color: rgb(60, 45, 30);
  cursor: pointer;
}

nav .nav-item img {
  vertical-align: middle;
}

hr {
  display: block;
  background-color: rgb(229, 211, 179);
  height: 2px;
  border: 0;
  margin-top: 1.5vw;
}

.current-room {
  display: flex;
  align-items: center;
  color: rgb(229, 211, 179);
  background-color: rgb(152, 117, 84);
  padding: 15px;
}

.current-room > .count {
  background-color: rgb(185,153,118);
  margin-left: auto;
  padding-left: 10px;
  padding-right: 10px;
}

.room {
  display: flex;
  align-items: center;
  color: rgb(60, 45, 30);
  padding: 15px;
}

.room > .count {
  background-color: rgb(152, 117, 84);
  margin-left: auto;
  padding-left: 10px;
  padding-right: 10px;
}

.room:hover {
  color: rgb(229, 211, 179);
  background-color: rgb(152, 117, 84);
  cursor: pointer;
}

.room:hover .count{
  background-color: rgb(185,153,118);
}

.disable {
  pointer-events: none;
  display: flex;
  align-items: center;
  color: gray;
  padding: 15px;
}

.disable > .count {
  margin-left: auto;
  padding-left: 10px;
  padding-right: 10px;
}

.home-message {
  font-size: 1.2vw;
  padding: 1.5vw;
  margin-bottom: 1.5vw;
  background-color: rgb(242, 233, 217);
}

.auth-message {
  font-size: 1.2vw;
  padding: 1.5vw;
  background-color: rgb(242, 233, 217);
}

.auth-form {
  padding: 1.5vw;
  background-color: rgb(229, 211, 179);
}

.auth-input {
  border: none;
  width: 33.6vw;
  font-size: 1vw;
  padding-top: 0.75vw;
  padding-bottom: 0.75vw;
  padding-left: 1vw;
  padding-right: 1vw;
  margin-bottom: 1.5vw;
}

.auth-button {
  border: none;
  width: 100%;
  font-size: 1vw;
  padding-top: 0.75vw;
  padding-bottom: 0.75vw;
  padding-left: 1vw;
  padding-right: 1vw;
  color: white;
  background-color: rgb(152, 117, 84);
}

.auth-button:hover {
  background-color: rgb(177, 62, 42);
  cursor: pointer;
}

.room-header {
  display: flex;
  font-size: 1.2vw;
  padding: 1.5vw;
  background-color: rgb(242, 233, 217);
}

.chess {
  position: relative;
  width: 38.75vw;
  margin-top: 1.5vw;
}

.modal {
  display: block;
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.4);
}

.modal-content {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%)
}

.modal-message {
  font-size: 1.5vw;
  color: white;
  margin: 10px;
}

.modal-timer {
  font-size: 2vw;
  color: white;
}

.modal-buttons > *:hover {
  color: white;
  background-color: rgb(177, 62, 42);
  cursor: pointer;
}

.modal-buttons > *:disabled {
  color: white;
  background-color: gray;
}

.white-button {
  color: black;
  background-color: white;
  border: none;
  height: 4vw;
  width: 8vw;
  text-align: center;
  text-decoration: none;
  font-size: 1.2vw;
}

.black-button {
  color: white;
  background-color: black;
  border: none;
  height: 4vw;
  width: 8vw;
  text-align: center;
  text-decoration: none;
  font-size: 1.2vw;
}

.play-again-button {
  color: white;
  background-color: rgb(0, 179, 44);
  border: none;
  height: 4vw;
  width: 8vw;
  text-align: center;
  text-decoration: none;
  font-size: 1.2vw;
}

.buttons {
  display: flex;
  justify-content: space-around;
  padding: 1.5vw;
  background-color: rgb(242, 233, 217);
}

.buttons > .bad {
  background-color: rgb(220, 61, 42);
  border: none;
  color: white;
  padding: 0.75vw 1vw;
  text-align: center;
  text-decoration: none;
  font-size: 1vw;
}

.buttons > .good {
  background-color: rgb(0, 179, 44);
  border: none;
  color: white;
  padding: 0.75vw 1vw;
  text-align: center;
  text-decoration: none;
  font-size: 1vw;
}

.buttons > .neutral {
  background-color: rgb(0, 140, 242);
  border: none;
  color: white;
  padding: 0.75vw 1vw;
  text-align: center;
  text-decoration: none;
  font-size: 1vw;
}

.buttons > *:hover {
  background-color: rgb(177, 62, 42);
  cursor: pointer;
}

.buttons > *:disabled {
  background-color: gray;
}

.player {
  width: 16vw;
}

.chat-box {
  height: 22.5vw;
  overflow: auto;
  overflow-wrap: break-word;
  word-wrap: break-word;
  hyphens: auto;
  background-color: rgb(229, 211, 179);
  margin-top: 1.5vw;
  padding: 1.5vw;
  font-size: 1vw;
}

.chat-bar {
  display: flex;
  padding: 1.5vw;
  background-color: rgb(242, 233, 217);
}

.chat-input {
  width: 88%;
  border: none;
  padding-top: 0.75vw;
  padding-bottom: 0.75vw;
  padding-left: 1vw;
  padding-right: 1vw;
  font-size: 1vw;
}

.chat-button {
  width: 12%;
  color: white;
  background-color: rgb(0, 179, 44);
  border: none;
  font-size: 1vw;
}

.chat-button:hover {
  background-color: rgb(177, 62, 42);
  cursor: pointer;
}

.chat-button:disabled {
  background-color: gray;
}

@media screen and (max-width: 760px) {
  .container {
    grid-template-areas:
    "header"
    "gap"
    "sidebar"
    "content";
    grid-template-rows: 75px 0.25vw 45px 1fr;
    grid-template-columns: 1fr;
  }

  .container > .sidebar {
    display: grid;
    grid-template-rows: 45px;
    grid-template-columns: repeat(6, 1fr);
  }

  .container > .content {
    grid-template-areas:
    "game"
    "queue"
    "chat";
    grid-template-rows: 5fr 0.65fr 2.1fr;
    grid-template-columns: 1fr;
  }

  .current-room {
    flex-direction: column;
    padding: 5px;
  }

  .current-room > .count {
    margin-left: 0;
  }

  .room {
    flex-direction: column;
    padding: 5px;
  }

  .room > .count {
    margin-left: 0;
  }

  .disable {
    flex-direction: column;
    padding: 5px;
  }

  .disable > .count {
    margin-left: 0;
  }

  .home-message {
    font-size: 1em;
  }

  .auth-message {
    font-size: 1em;
  }

  .auth-input {
    width: 88.85vw;
    font-size: 1em;
  }

  .auth-button {
    font-size: 1em;
  }

  .room-header {
    font-size: 1.2em;
  }

  .chess {
    width: 94vw;
  }

  .modal-message {
    font-size: 1.5em;
  }

  .modal-timer {
    font-size: 2em
  }

  .white-button {
    height: 50px;
    width: 100px;
    font-size: 1.2em;
  }

  .black-button {
    height: 50px;
    width: 100px;
    font-size: 1.2em;
  }

  .play-again-button {
    height: 50px;
    width: 100px;
    font-size: 1.2em;
  }

  .buttons > .bad {
    font-size: 1em;
  }

  .buttons > .good {
    font-size: 1em;
  }

  .buttons > .neutral {
    font-size: 1em;
  }

  .player {
    width: 45vw;
  }

  .chat-box {
    font-size: 1em;
  }

  .chat-input {
    font-size: 1em;
  }

  .chat-button {
    font-size: 1em;
  }
}

